<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tfo-iI-yLE">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="collection view cell content view" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="LQ6-ho-jE5">
            <objects>
                <navigationController id="tfo-iI-yLE" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XOt-an-skz">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="dT0-Mc-zgD" kind="relationship" relationship="rootViewController" id="P7j-VH-fJp"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="B43-1M-bWO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1159" y="-64"/>
        </scene>
        <!--Main View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MainViewController" id="BYZ-38-t0r" customClass="MainViewController" customModule="NimbleSurvey" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2CH-GW-lEr">
                                <rect key="frame" x="165" y="408" width="84" height="80"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="84" id="lBh-60-1p3"/>
                                    <constraint firstAttribute="height" constant="80" id="sVb-kb-FhE"/>
                                </constraints>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="2CH-GW-lEr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HsN-2D-NcK"/>
                            <constraint firstItem="2CH-GW-lEr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tCO-Qu-8rs"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="imgLoading" destination="2CH-GW-lEr" id="lIy-JK-fEa"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-430" y="-64"/>
        </scene>
        <!--SURVEYS-->
        <scene sceneID="yjD-5r-BQ8">
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="dT0-Mc-zgD" customClass="HomeViewController" customModule="NimbleSurvey" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5iW-11-fk0">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q3c-Lc-LZY">
                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="laM-6H-bRl">
                                    <size key="itemSize" width="128" height="128"/>
                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <cells>
                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8Rb-ez-D1g">
                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dyh-bF-0TF">
                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </collectionViewCellContentView>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VVq-U3-Ame">
                                <rect key="frame" x="374" y="104" width="32" height="750"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="32" id="sSv-qU-ACm"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="ta6-fR-l6O" firstAttribute="trailing" secondItem="VVq-U3-Ame" secondAttribute="trailing" constant="8" id="HN4-Z6-cOD"/>
                            <constraint firstItem="ta6-fR-l6O" firstAttribute="bottom" secondItem="VVq-U3-Ame" secondAttribute="bottom" constant="8" id="Wmd-1v-mMo"/>
                            <constraint firstAttribute="bottom" secondItem="Q3c-Lc-LZY" secondAttribute="bottom" id="dod-un-r5R"/>
                            <constraint firstItem="Q3c-Lc-LZY" firstAttribute="leading" secondItem="ta6-fR-l6O" secondAttribute="leading" id="pNi-Jp-ipq"/>
                            <constraint firstItem="ta6-fR-l6O" firstAttribute="trailing" secondItem="Q3c-Lc-LZY" secondAttribute="trailing" id="psh-Qd-rMP"/>
                            <constraint firstItem="VVq-U3-Ame" firstAttribute="top" secondItem="ta6-fR-l6O" secondAttribute="top" constant="16" id="son-KI-iMO"/>
                            <constraint firstItem="Q3c-Lc-LZY" firstAttribute="top" secondItem="ta6-fR-l6O" secondAttribute="top" id="wlc-pd-cBw"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ta6-fR-l6O"/>
                    </view>
                    <navigationItem key="navigationItem" title="SURVEYS" id="t1i-Ee-auF">
                        <barButtonItem key="leftBarButtonItem" image="arrow.clockwise" catalog="system" id="2Vd-gR-CeV">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="touchedBtnRefresh:" destination="dT0-Mc-zgD" id="qFj-uB-1T9"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="line.horizontal.3" catalog="system" id="wrw-Qb-1HC">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="btnMenu" destination="wrw-Qb-1HC" id="zTe-eN-WTN"/>
                        <outlet property="btnRefresh" destination="2Vd-gR-CeV" id="f3p-Hv-Yyv"/>
                        <outlet property="collectionView" destination="Q3c-Lc-LZY" id="sWM-iG-ACp"/>
                        <outlet property="stepIndicatorContainerView" destination="VVq-U3-Ame" id="rsg-8D-hvV"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aUE-bo-cch" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="337.68115942028987" y="-64.285714285714278"/>
        </scene>
        <!--Detail View Controller-->
        <scene sceneID="vz7-5K-V0f">
            <objects>
                <viewController storyboardIdentifier="DetailViewController" id="2Y0-oC-1jy" customClass="DetailViewController" customModule="NimbleSurvey" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="gVm-XK-rsc">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ph-YF-zl2">
                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                <attributedString key="attributedText">
                                    <fragment>
                                        <string key="content">htmlStr	String	"&lt;div&gt;&lt;span style=\"font-size:14px\"&gt;&lt;span style=\"font-family:arial,helvetica,sans-serif\"&gt;Dear {name},&lt;/span&gt;&lt;/span&gt;&lt;br /&gt;&amp;nbsp;&lt;/div&gt;&lt;div&gt;&lt;span style=\"font-size:14px\"&gt;&lt;span style=\"font-family:arial,helvetica,sans-serif\"&gt;Thank you for visiting Westside Lounge at&amp;nbsp;Dubai&lt;/span&gt;&lt;/span&gt;&lt;span style=\"font-family:arial,helvetica,sans-serif; font-size:14px\"&gt; International Hotel&amp;nbsp;&lt;/span&gt;&lt;span style=\"font-family:arial,helvetica,sans-serif; font-size:14px\"&gt;and for taking the time to complete our brief survey. We are constantly striving to improve and your feedback allows us to make the experience even better for you on your next visit. Each survey is read individually by senior staff and discussed with the team in daily meetings.&lt;/span&gt;&lt;/div&gt;&lt;div&gt;&amp;nbsp;&lt;/div&gt;&lt;div&gt;&lt;span style=\"font-size:14px\"&gt;&lt;span style=\"font-family:arial,helvetica,sans-serif\"&gt;We would appreciate it if you could please spend a few moments to review us on TripAdvisor. By &lt;a href=\"https://www.tripadvisor.com/Restaurant_Review-g295424-d11765915-Revie"...	</string>
                                        <attributes>
                                            <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                            <font key="NSFont" metaFont="message" size="11"/>
                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                        </attributes>
                                    </fragment>
                                </attributedString>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="3ph-YF-zl2" firstAttribute="trailing" secondItem="k4x-Kt-CI8" secondAttribute="trailing" id="2d7-3x-grp"/>
                            <constraint firstItem="3ph-YF-zl2" firstAttribute="leading" secondItem="k4x-Kt-CI8" secondAttribute="leading" id="6Rq-1D-522"/>
                            <constraint firstAttribute="bottom" secondItem="3ph-YF-zl2" secondAttribute="bottom" id="TjP-eU-S0Y"/>
                            <constraint firstItem="3ph-YF-zl2" firstAttribute="top" secondItem="k4x-Kt-CI8" secondAttribute="top" id="pOh-sP-QYA"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="k4x-Kt-CI8"/>
                    </view>
                    <connections>
                        <outlet property="lbEmail" destination="3ph-YF-zl2" id="i5Z-jy-sAh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yYP-bz-zf3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1023.1884057971015" y="-64.285714285714278"/>
        </scene>
    </scenes>
    <resources>
        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
        <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
    </resources>
</document>
