...
class SurveyCell: UICollectionViewCell {
    static var reuseIdentifier = "SurveyCell"

    @IBOutlet weak var imageView: UIImageView!
    @IBOutlet weak var lbTitle: UILabel!
    @IBOutlet weak var lbDes: UILabel!
    @IBOutlet weak var btnTakeSurvey: UIButton!
    
    var survey: Survey?
    var delegate: SurveyCellDelegate?

    override func layoutSubviews() {
        super.layoutSubviews()
...
